--- a/index.html
+++ b/index.html
@@ -1,45 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>Promoções SP - iFood</title>
+    <title>Tem promoção hoje?</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <script src="adm/index.js"></script>
+    <script src="index.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <img src="img/ifood-logo.png" alt="">
-        <h1 class="title">Promoções Ativas iFood - São Paulo</h1>
+        <h1 class="title">Tem promoção hoje? - São Paulo</h1>
     </header>
 
     <main>
             <div class="active-content">
                 <div class="background-content">
 
-                    <h2 class="title-content">Promoção por Região</h2>
-                    <p>R$+4,00 extra por rota na região de São Paulo das 9h20 as 14h</p>
+                    <h2 class="title-content">Promoção: </h2>
+                    <p id="offer">Sem promoções no momento</p>
                 </div>
                 <div class="background-content">
-                    <h2 class="title-content">Previsão do Tempo - SP</h2>
-                    <p>Chuva</p>
+                    <h2 class="title-content">Previsão do Tempo</h2>
+                    <div id="ww_8549eed6d53e9" v='1.3' loc='id' a='{"t":"horizontal","lang":"pt","sl_lpl":1,"ids":["wl1583"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"rgba(0,71,87,1)","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#FFFFFF","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_whr":3}'>Mais previsões: <a href="https://oneweather.org/sao_paulo/30_days/" id="ww_8549eed6d53e9_u" target="_blank">Weather forecast Sao Paulo 30 days</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_8549eed6d53e9"></script>
                 </div>
             </div>
-
-        <h1 class="title">Ultimas Promoções</h1>
-        <div class="past-content">
-            <p>R$+4,00 extra por rota na ZONA de São Paulo, das 11:00 as 14:59</p>
-            <p>R$+4,00 extra por rota na região de São Paulo, das 11:00 as 14:59</p>
-            <p>R$+4,00 extra por rota na ZONA de São Paulo, das 11:00 as 14:59</p>
-            <p>R$+4,00 extra por rota na região de São Paulo, das 11:00 as 14:59</p>
-            <p>R$+4,00 extra por rota na ZONA de São Paulo, das 11:00 as 14:59</p>
-            <p>R$+4,00 extra por rota na ZONA de São Paulo, das 11:00 as 14:59</p>
-        </div>
-
     </main>
 </body>
 </html>
